[package]
authors = ["Jørgen Nordmoen <jorgen.nordmoen@gmail.com>", "Christian Haynes <06chaynes@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the HC-SR04 (ultrasonic distance sensor)"
documentation = "https://docs.rs/hc-sr04"
keywords = ["embedded-hal-driver", "ultrasonic distance", "sensor"]
license = "MIT/Apache-2.0"
name = "hc-sr04"
readme = "README.md"
repository = "https://github.com/06chaynes/hc-sr04"
version = "0.2.0"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-nb = "1.0.0"
embedded-timers = "0.4.0"

[dev-dependencies]
embedded-hal-mock = "0.11.1"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
debug = true
lto = true
