[package]
name = "esp32-example"
version = "0.1.0"
authors = ["Christian Haynes <06chaynes@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-example"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = "0.4.27"
esp-idf-svc = { version = "0.51.0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-hal = "0.45.2"
esp-idf-sys = "0.36.1"
embedded-svc = "0.28.1"
hc-sr04 = { path = "../../../hc-sr04" }
embedded-timers = "0.4.0"

[build-dependencies]
embuild = "0.33"
